--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -3,6 +3,5 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/ThiagoSousaSantana/rest-aurant
-          search-paths:
-            - "config-properties/{application}/{profile}"
+          uri: https://github.com/ThiagoSousaSantana/restaurant
+          search-paths:          - "config-properties/{application}/{profile}"
