--- a/config-properties/account-service/default/account-service.yml
+++ b/config-properties/account-service/default/account-service.yml
@@ -1,6 +1,3 @@
-security: 
-  basic: 
-    enabled: false
 spring: 
   datasource: 
     password: 
@@ -10,7 +7,8 @@ spring:
     console: 
       enabled: true
       path: /h2-console
-  kafka: 
-    bootstrap-servers: "localhost:9092"
-    topic: 
-      userCreated: USER_CREATED_TOPIC
+  kafka:
+    bootstrap-servers:
+    - "localhost:9092"
+    template:
+      default-topic: USER_CREATED_TOPIC
