--- a/config-properties/account-service/default/account-service.yml
+++ b/config-properties/account-service/default/account-service.yml
@@ -8,7 +8,6 @@ spring:
       enabled: true
       path: /h2-console
   kafka:
-    bootstrap-servers:
-    - "localhost:9092"
+    bootstrap-servers: "localhost:9092"
     template:
       default-topic: USER_CREATED_TOPIC
