--- a/config-properties/account-service/default/account-service.yml
+++ b/config-properties/account-service/default/account-service.yml
@@ -9,5 +9,5 @@ spring:
       path: /h2-console
   kafka:
     bootstrap-servers: "localhost:9092"
-    template:
+    topic: 
       userCreated: USER_CREATED_TOPIC
