--- a/config-properties/email-service/default/email-service.yml
+++ b/config-properties/email-service/default/email-service.yml
@@ -1,13 +1,20 @@
-spring: 
-  datasource: 
-    password: 
-    url: "jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE"
-    username: sa
-  h2: 
-    console: 
+spring:
+  kafka:
+    consumer:
+      group-id: ms_mail_consumer
+  h2:
+    console:
       enabled: true
       path: /h2-console
-  kafka:
-    bootstrap-servers: "localhost:9092"
-    topic: 
-      userCreated: USER_CREATED_TOPIC
+  datasource:
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    username: sa
+    password:
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: restaurantauth@gmail.com
+    password: gvRr824AHATrARnKfIPc 
+    properties.mail.smtp:
+      auth: true
+      starttls.enable: true
